fix: toggle footer alerts on safari

--- a/scss/openy_node_alert.scss
+++ b/scss/openy_node_alert.scss
@@ -37,7 +37,7 @@
 }
 
 .header-alerts-list, .footer-alerts-list  {
-  .site-alert--header  {
+  .site-alert--header, .site-alert--footer  {
     div[role=article] {
       height: inherit !important;
     }
